--- a/index.html
+++ b/index.html
@@ -6,46 +6,89 @@
     <title>EducationBD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="container">
     <!-- header start -->
+    <header>
+      <!-- navbar start -->
+      <section>
+        <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">EducationBD</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Courses</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Deals</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Success</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Register</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </section>
+      <!-- navbar end -->
 
-    <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">EducationBD</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Deals</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Success</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Register</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+      <!-- slider start -->
+      <section>
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="1000">
+              <img style="filter: brightness(50%);" src="images/cover/cover-1.png" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
+              <div class="carousel-caption d-none d-md-block text-white">
+                <h5>Get Started Digital Learning</h5>
+                <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <button type="button" class="btn btn-primary">Primary</button>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="1000">
+              <img style="filter: brightness(50%);" src="images/cover/cover-2.jpg" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
+              <div class="carousel-caption d-none d-md-block text-white">
+                <h5>Get Started Digital Learning</h5>
+                <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <button type="button" class="btn btn-primary">Primary</button>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="1000">
+              <img style="filter: brightness(50%);" src="images/cover/cover-3.jpg" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
+              <div class="carousel-caption d-none d-md-block text-white">
+                <h5>Get Started Digital Learning</h5>
+                <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <button type="button" class="btn btn-primary">Primary</button>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-      </div>
-    </nav>
-    <!-- navbar end -->
-
+      </section>
+      <!-- slider end -->
+    </header>
     <!-- header end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
