--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
       <section>
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="1000">
+            <div class="carousel-item active" data-bs-interval="3000">
               <img style="filter: brightness(50%);" src="images/cover/cover-1.png" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
               <div class="carousel-caption d-none d-md-block text-white">
                 <h5>Get Started Digital Learning</h5>
                 <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
-                <button type="button" class="btn btn-primary">Primary</button>
+                <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="1000">
+            <div class="carousel-item" data-bs-interval="3000">
               <img style="filter: brightness(50%);" src="images/cover/cover-2.jpg" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
               <div class="carousel-caption d-none d-md-block text-white">
                 <h5>Get Started Digital Learning</h5>
                 <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
-                <button type="button" class="btn btn-primary">Primary</button>
+                <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="1000">
+            <div class="carousel-item" data-bs-interval="3000">
               <img style="filter: brightness(50%);" src="images/cover/cover-3.jpg" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
               <div class="carousel-caption d-none d-md-block text-white">
                 <h5>Get Started Digital Learning</h5>
                 <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
-                <button type="button" class="btn btn-primary">Primary</button>
+                <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
               </div>
             </div>
           </div>
@@ -90,6 +90,153 @@
       <!-- slider end -->
     </header>
     <!-- header end -->
+
+    <!-- main started  -->
+
+    <main>
+      <!-- popular class started  -->
+      <section class="container">
+        <div class="d-flex justify-content-center flex-column align-items-center">
+          <div>
+            <h1 class="text-center">Discover Our Popular Courses</h1>
+            <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </div>
+          <div class="container">
+            <div class="row g-3">
+              <div class="col-lg-6">
+                <div class="d-flex border border-secondary">
+                  <div>
+                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
+                  </div>
+                  <div class="my-auto ms-3">
+                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="d-flex border border-secondary">
+                  <div>
+                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
+                  </div>
+                  <div class="my-auto ms-3">
+                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="d-flex border border-secondary">
+                  <div>
+                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
+                  </div>
+                  <div class="my-auto ms-3">
+                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="d-flex border border-secondary">
+                  <div>
+                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
+                  </div>
+                  <div class="my-auto ms-3">
+                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="d-flex border border-secondary">
+                  <div>
+                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
+                  </div>
+                  <div class="my-auto ms-3">
+                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="d-flex border border-secondary">
+                  <div>
+                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
+                  </div>
+                  <div class="my-auto ms-3">
+                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <button type="button" class="btn btn-primary px-4 fw-bold">See More Courses</button>
+          </div>
+        </div>
+      </section>
+      <!-- popular class ended  -->
+
+      <!-- Ready to join start -->
+      <section class="container rounded bg-primary text-light p-5">
+        <div class="d-flex justify-content-between">
+          <div class="d-flex justify-content-center flex-column align-items-center">
+            <div class="w-50 my-auto">
+              <h1>Ready to join?</h1>
+              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+          </div>
+          <div class="w-50 d-flex justify-content-center flex-column align-items-center">
+            <div class="">
+              <button style="background-color: white; color: #289BDE" type="button" class="btn fw-bold" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Register Now</button>
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title text-dark" id="exampleModalLabel">Modal title</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p class="text-dark">Are you sure to register?</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                        <button type="button" class="btn btn-primary">Yes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Ready to join end -->
+
+      <!-- Frequently ask question start -->
+      <section class="container">
+        <div class="d-flex justify-content-center flex-column align-items-center">
+          <div class="d-flex justify-content-center flex-column align-items-center">
+            <h1>Frequently Asked Questions</h1>
+            <p class="text-muted">It is a long established fact that a reader will be distracted by the readable</p>
+            <p class="text-muted">content of a page when looking at its layout.</p>
+          </div>
+          <div>
+
+          </div>
+        </div>
+      </section>
+      <!-- Frequently ask question end -->
+
+    </main>
+    <!-- main ended  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
