--- a/index.html
+++ b/index.html
@@ -283,6 +283,26 @@
       </section>
       <!-- Frequently ask question end -->
 
+      <!-- Trusted Companies started -->
+      <section class="container">
+        <div class="d-flex justify-content-center flex-column align-items-center">
+          <div>
+            <h1>Trusted by over 800+ companies</h1>
+          </div>
+          <div>
+            <div class="row">
+              <div class="col-lg-2 my-auto"><img src="images/company/company-1.png" alt="" class="img-fluid"></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-2.png" alt="" class="img-fluid"></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-3.png" alt="" class="img-fluid"></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-4.png" alt="" class="img-fluid"></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-5.png" alt="" class="img-fluid"></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-6.png" alt="" class="img-fluid"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Trusted Companies ended -->
+
     </main>
     <!-- main ended  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
