--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EducationBD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body class="container">
     <!-- header start -->
@@ -54,7 +55,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <img style="filter: brightness(50%);" src="images/cover/cover-1.png" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
-              <div class="carousel-caption d-none d-md-block text-white">
+              <div class="carousel-caption d-block d-md-block text-white">
                 <h5>Get Started Digital Learning</h5>
                 <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
                 <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
@@ -62,7 +63,7 @@
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <img style="filter: brightness(50%);" src="images/cover/cover-2.jpg" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
-              <div class="carousel-caption d-none d-md-block text-white">
+              <div class="carousel-caption d-block d-md-block text-white">
                 <h5>Get Started Digital Learning</h5>
                 <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
                 <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
@@ -70,7 +71,7 @@
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <img style="filter: brightness(50%);" src="images/cover/cover-3.jpg" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
-              <div class="carousel-caption d-none d-md-block text-white">
+              <div class="carousel-caption d-block d-md-block text-white">
                 <h5>Get Started Digital Learning</h5>
                 <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
                 <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
@@ -305,6 +306,30 @@
 
     </main>
     <!-- main ended  -->
+
+
+    <!-- Footer started -->
+    <section class="container bg-dark text-light">
+      <div class="d-flex justify-content-center flex-column align-items-center p-5">
+        <div>EducationBD</div>
+        <div>
+          <p class="m-0 text-center">Office 41, Zawaya Buildin, Ghala Muscat,<br> 
+            Sultanate of Oman</p>
+        </div>
+        <div class="privacy-terms">
+          <a href="">Privacy & Policy</a>
+          <a href="">Terms of use</a>
+        </div>
+        <div class="">
+          <i class="fa-brands fa-facebook"></i> 
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-brands fa-tiktok"></i>
+        </div>
+      </div>
+    </section>
+    <!-- Footer ended -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7e596160a4.js" crossorigin="anonymous"></script>
   </body>
 </html>
