--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- navbar end -->
 
       <!-- slider start -->
-      <section>
+      <section class=" my-5">
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
@@ -96,105 +96,60 @@
 
     <main>
       <!-- popular class started  -->
-      <section class="container">
+      <section class="container my-5">
         <div class="d-flex justify-content-center flex-column align-items-center">
           <div>
             <h1 class="text-center">Discover Our Popular Courses</h1>
             <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
           </div>
-          <div class="container">
+          <div class="container d-flex justify-content-center">
             <div class="row g-3">
-              <div class="col-lg-6">
-                <div class="d-flex border border-secondary">
-                  <div>
-                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
-                  </div>
-                  <div class="my-auto ms-3">
-                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
-                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
-                  </div>
+              <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                      <img src="images/course/course-1.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
+                      <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                      <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                      <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                    </div>
                 </div>
               </div>
-              <div class="col-lg-6">
-                <div class="d-flex border border-secondary">
-                  <div>
-                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
-                  </div>
-                  <div class="my-auto ms-3">
-                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
-                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="d-flex border border-secondary">
-                  <div>
-                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
-                  </div>
-                  <div class="my-auto ms-3">
-                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
-                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="d-flex border border-secondary">
-                  <div>
-                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
-                  </div>
-                  <div class="my-auto ms-3">
-                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
-                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="d-flex border border-secondary">
-                  <div>
-                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
-                  </div>
-                  <div class="my-auto ms-3">
-                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
-                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="d-flex border border-secondary">
-                  <div>
-                    <img src="images/course/course-1.png" alt="" class="img-fluid rounded">
-                  </div>
-                  <div class="my-auto ms-3">
-                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
-                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
-                  </div>
+              <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                      <img src="images/course/course-1.png" alt="" class="card-img-top">
+                    </div>
+                    <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
+                      <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                      <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                      <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                    </div>
                 </div>
               </div>
             </div>
           </div>
           <div>
-            <button type="button" class="btn btn-primary px-4 fw-bold">See More Courses</button>
+            <button type="button" class="d-none d-sm-none d-md-none d-lg-block btn btn-primary px-4 fw-bold">See More Courses</button>
+          </div>
+          <div>
+            <button type="button" class="d-block d-sm-block d-md-block d-lg-none btn btn-primary px-4 fw-bold">View All</button>
           </div>
         </div>
       </section>
       <!-- popular class ended  -->
 
       <!-- Ready to join start -->
-      <section class="container rounded bg-primary text-light p-5">
-        <div class="d-flex justify-content-between">
-          <div class="d-flex justify-content-center flex-column align-items-center">
-            <div class="w-50 my-auto">
+      <section class="container rounded bg-primary text-light p-5 my-5">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 d-flex justify-content-center flex-column align-items-center">
+            <div class="my-auto">
               <h1>Ready to join?</h1>
               <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             </div>
           </div>
-          <div class="w-50 d-flex justify-content-center flex-column align-items-center">
+          <div class="col-lg-6 col-md-12 d-flex justify-content-center flex-column align-items-center">
             <div class="">
               <button style="background-color: white; color: #289BDE" type="button" class="btn fw-bold" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Register Now</button>
@@ -222,7 +177,7 @@
       <!-- Ready to join end -->
 
       <!-- Frequently ask question start -->
-      <section class="container">
+      <section class="container my-5">
         <div class="d-flex justify-content-center flex-column align-items-center">
           <div class="d-flex justify-content-center flex-column align-items-center">
             <h1>Frequently Asked Questions</h1>
@@ -285,19 +240,19 @@
       <!-- Frequently ask question end -->
 
       <!-- Trusted Companies started -->
-      <section class="container">
+      <section class="container my-5 d-none d-sm-none d-md-none d-lg-block">
         <div class="d-flex justify-content-center flex-column align-items-center">
           <div>
             <h1>Trusted by over 800+ companies</h1>
           </div>
           <div>
             <div class="row">
-              <div class="col-lg-2 my-auto"><img src="images/company/company-1.png" alt="" class="img-fluid"></div>
-              <div class="col-lg-2 my-auto"><img src="images/company/company-2.png" alt="" class="img-fluid"></div>
-              <div class="col-lg-2 my-auto"><img src="images/company/company-3.png" alt="" class="img-fluid"></div>
-              <div class="col-lg-2 my-auto"><img src="images/company/company-4.png" alt="" class="img-fluid"></div>
-              <div class="col-lg-2 my-auto"><img src="images/company/company-5.png" alt="" class="img-fluid"></div>
-              <div class="col-lg-2 my-auto"><img src="images/company/company-6.png" alt="" class="img-fluid"></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-1.png" alt="" class=""></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-2.png" alt="" class=""></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-3.png" alt="" class=""></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-4.png" alt="" class=""></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-5.png" alt="" class=""></div>
+              <div class="col-lg-2 my-auto"><img src="images/company/company-6.png" alt="" class=""></div>
             </div>
           </div>
         </div>
@@ -309,7 +264,7 @@
 
 
     <!-- Footer started -->
-    <section class="container bg-dark text-light">
+    <section class="container bg-dark text-light my-5">
       <div class="d-flex justify-content-center flex-column align-items-center p-5">
         <div>EducationBD</div>
         <div>
@@ -329,7 +284,11 @@
       </div>
     </section>
     <!-- Footer ended -->
+
+    <!-- JavaScript link add -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+    <!-- font awesome link add -->
     <script src="https://kit.fontawesome.com/7e596160a4.js" crossorigin="anonymous"></script>
   </body>
 </html>
