--- a/practice.html
+++ b/practice.html
@@ -8,13 +8,48 @@
   </head>
   <body>
 
-    <div class="container">
-        <div class="row">
-
+    <section class="container my-5">
+      <div class="d-flex justify-content-center flex-column align-items-center">
+        <div>
+          <h1 class="text-center">Discover Our Popular Courses</h1>
+          <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         </div>
-    </div>
-
-    <img src="images/course/course-1.png" alt="">
+        <div class="container d-flex justify-content-center">
+          <div class="row g-3">
+            <div class="col-lg-6 col-md-12 col-sm-12">
+              <div class="row align-items-center">
+                  <div class="col-lg-4 col-md-4 col-sm-12">
+                    <img src="images/course/company-2.png" alt="" class="">
+                  </div>
+                  <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
+                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                  </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+              <div class="row align-items-center">
+                  <div class="col-lg-4 col-md-4 col-sm-12">
+                    <img src="images/course/course-2.png" alt="" class="">
+                  </div>
+                  <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
+                    <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
+                    <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <button type="button" class="d-none d-sm-none d-md-none d-lg-block btn btn-primary px-4 fw-bold">See More Courses</button>
+        </div>
+        <div>
+          <button type="button" class="d-block d-sm-block d-md-block d-lg-none btn btn-primary px-4 fw-bold">View All</button>
+        </div>
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
