--- a/practice.html
+++ b/practice.html
@@ -19,7 +19,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
               <div class="row align-items-center">
                   <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="images/course/company-2.png" alt="" class="">
+                    <img src="images/course/cou.png" alt="" class="">
                   </div>
                   <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                     <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
