--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- navbar end -->
 
       <!-- slider start -->
-      <section class="container mb-5">
+      <section class="container mb-5 fixing-top">
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
@@ -324,7 +324,7 @@
           <a href="">Terms of use</a>
         </div>
         <div class="">
-          <a href="" class="text-decoration-none text-light"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.facebook.com/grsagor.official/" class="text-decoration-none text-light"><i class="fa-brands fa-facebook"></i></a>
           <a href="" class="text-decoration-none text-light"><i class="fa-brands fa-twitter"></i>
           </a><a href="" class="text-decoration-none text-light"><i class="fa-brands fa-linkedin-in"></i></a>
           <a href="" class="text-decoration-none text-light"><i class="fa-brands fa-tiktok"></i></a>
