slider images rounded

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-              <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid img-brightness" alt="...">
+              <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid img-brightness rounded" alt="...">
               <div class="carousel-caption d-block d-md-block text-white">
                 <h5>Get Connected With EducationBD</h5>
                 <p>We are providing the best facilities for our student. If if you are can go with us,<br>Then you are WELCOME!</p>
@@ -62,7 +62,7 @@
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid img-brightness" alt="...">
+              <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid img-brightness rounded" alt="...">
               <div class="carousel-caption d-block d-md-block text-white">
                 <h5>Get Connected With EducationBD</h5>
                 <p>We are providing the best facilities for our student. If if you are can go with us,<br>Then you are WELCOME!</p>
@@ -70,7 +70,7 @@
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid img-brightness" alt="...">
+              <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid img-brightness rounded" alt="...">
               <div class="carousel-caption d-block d-md-block text-white">
                 <h5>Get Connected With EducationBD</h5>
                 <p>We are providing the best facilities for our student. If if you are can go with us,<br>Then you are WELCOME!</p>
